--- a/contact.css
+++ b/contact.css
@@ -1,88 +1,190 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300;1,400;1,500;1,700&display=swap');
+@import url(fontawesome-all.min.css);
 body,
 html {
     width: 100%;
     height: 100%;
 }
-
+/*
 body {
     display: flex;
     align-items: center;
     justify-content: center;
     perspective: 900px;
     background-image: linear-gradient(#ecf0f1, #bdc3c7);
+}*/
+body {
+    margin: 0px;
+    padding: 0;
+    background-color:rgb(255, 255, 255);
+    font-family: 'Poppins', sans-serif;
+    overflow-x: hidden; 
+    background: whitesmoke;
 }
 
-.cube {
-    width: 40vh;
-    height: 40vh;
+
+/*-------------------------Navbar---------------------------*/
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 80px 0px;
+    background-color: whitesmoke
+} 
+.left-navbar{
+    margin-top: 5px;
+}
+.right-navbar {
+    display: flex;
+    overflow: auto;
+    justify-content: space-between;
+    background-color: whitesmoke;
+}
+.navbar > .right-navbar > div {
+    height: 30px;
+    width: 120px;
+    margin-top: 15px;
+    font-size: 1.1em;
+    background-color: whitesmoke;
+}
+.nav-link1 {
+    height: 22px;
+    border-bottom: 1px solid black;
+    transition: border-bottom 0.5s;
+    text-align: center;
+}
+.nav-link1 a {
+    color: #232323;
+    opacity: 1;
+    text-decoration: none;
+    transition: color 0.5s;
+    font-family: 'poppins';
+    font-weight: bold;
+}
+.nav-link1 a:hover {
+    color: rgb(0, 0, 0);
+    opacity: 1;
+}
+.nav-link {
+    height: 22px;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.5s;
+    text-align: center;
+}
+.nav-link a {
+    color: #232323;
+    opacity: 0.8;
+    text-decoration: none;
+    transition: color 0.5s;
+    font-family: 'poppins';
+    font-weight: bold;
+}
+
+.nav-link:hover {
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.nav-link a:hover {
+    color: rgb(0, 0, 0);
+    opacity: 1;
+}
+
+/*---------------------Contact Page-------------------*/
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    margin-left: 12vw;
+    margin-top: 12vh;
+    background: #fff;
+    border-radius: 6px;
+    padding: 30px 60px 40px 40px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.container .content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.container .content .left-side{
+    width: 25%;
+    height: 100%;
+    margin-top: 15px;
     position: relative;
-    transform-style: preserve-3d;
-    animation: rotate 10s linear infinite;
 }
-.cube :after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
+.content .left-side::before{
+    content: ' ';
     position: absolute;
-    transform-origin: bottom;
-    transform-style: preserve-3d;
-    transform: rotateX(90deg) translateY(20vh) translateZ(-20vh);
-    background-color: rgba(0, 0, 0, 0.1);
+    height: 70%;
+    width: 2px;
+    right: -15px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #afafb6;
+}
+.content .left-side .details{
+    margin: 14px;
+    text-align: center;
+}
+.content .left-side .details i{
+    font-size: 30px;
+    color: #3e2093;
+}
+.content .left-side .details .topic{
+    font-size: 18px;
+    font-weight: 500;;
+}
+.content .left-side .details .text-one,
+.content .left-side .details .text-two{
+    font-size: 14px;
+    color: #afafb6;
+}
+.container .content .right-side{
+    width: 75%;
+    margin-left: 75px;
+}
+.content .right-side .topic-text{
+    font-size: 23px;
+    font-weight: 600;
+    color: #3e2093;
 }
 
-.cube > div {
-    background-color: rgba(#2ecc71, 0.7);
-    position: absolute;
+.right-side .input-box{
+    height: 50px;
     width: 100%;
+    margin: 12px 0;
+}
+.right-side .input-box input,
+.right-side .input-box textarea{
     height: 100%;
-    border: 1px solid #34495e;
-    box-shadow: 0 0 60px rgba(#2ecc71, 0.7);
+    width: 100%;
+    font-size: 16px;
+    border: none;
+    background: #F0F1F8;
+    border-radius: 6px;
+    padding: 0 15px;
+    resize: none;
 }
-    .cube > div:nth-child(1) {
-        transform: translateZ(-20vh);
-        animation: shade 10s -5s linear infinite;
-    }
-
-    .cube > div:nth-child(2) {
-        transform: translateZ(20vh) rotateY(180deg);
-        animation: shade 10s linear infinite;
-    }
-
-    .cube > div:nth-child(3) {
-        transform-origin: right;
-        transform: translateZ(20vh) rotateY(270deg);
-        animation: shade 10s -2.5s linear infinite;
-    }
-
-    .cube > div:nth-child(4) {
-        transform-origin: left;
-        transform: translateZ(20vh) rotateY(90deg);
-        animation: shade 10s -7.5s linear infinite;
-    }
-
-    .cube > div:nth-child(5) {
-        transform-origin: bottom;
-        transform: translateZ(20vh) rotateX(90deg);
-        background-color: rgba(black, 0.7);
-    }
-
-    .cube > div:nth-child(6) {
-        transform-origin: top;
-        transform: translateZ(20vh) rotateX(270deg);
-    }
-
-@keyframes rotate {
-    0% {
-        transform: rotateX(-15deg) rotateY(0deg);
-    }
-    100% {
-        transform: rotateX(-15deg) rotateY(360deg);
-    }
+.right-side .message-box{
+    min-height: 110px;
 }
-
-@keyframes shade {
-    50% {
-        background-color: rgba(black, 0.7);
-    }
+.right-side .button{
+    display: inline-block;
+    margin-top: 0px;
+}
+.right-side .button input[type="submit"]{
+    color: #fff;
+    font-size: 14px;
+    outline: none;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 6px;
+    background: #3e2093;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.button input[type="submit"]:hover{
+    background: #5029bc;
 }
