--- a/styles-home-cube.css
+++ b/styles-home-cube.css
@@ -123,4 +123,111 @@
     background-color: rgba(0, 0, 0, 0.7);
   }
 }
+
+/*
+$b1cd: #500033;
+$b1cl: #FF0077;
+$b2cd: #000050;
+$b2cl: #0033FF;
+$b3cd: #00501D;
+$b3cl: #00FF44;
+$b4cd: #554D00;
+$b4cl: #FF4E00;
+$b5cd: #300050;
+$b5cl: #8000FF;
+$black: #000;
+$white: #fff;
+$grey: #B5B4B4;
+
+@mixin color_render($DC, $LC) {
+  background-color: $DC;
+  .illustration .inner {
+      background-color: $LC;
+      &::after, &::before{ background-color: rgba($LC, .4);}
+  }
+  button {background-color: $LC;}
+}
+
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+
+.s4_container{
+  position: relative;
+  overflow: hidden;
+  border-radius: 5rem;
+}
+.slider{
+  display: flex;
+  width: 500%;
+  height: 40rem;
+  transition: all .25s ease-in;
+  transform: translateX(0);
+  .box{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+    .bg{
+      padding: 2rem;
+      background-color: rgba(255,255,255, 0.2);
+      width: 55%;
+      transform: skewX(7deg);
+      position: absolute;
+      height: 100%;
+      left: -10%;
+      padding-left: 20rem;
+      transform-origin: 0 100%;
+    }
+    .details {
+      padding: 5rem;
+      padding-left: 10rem;
+      z-index: 100;
+      grid-column: 1 /span 1;
+      grid-row: 1 / -1;
+      h1{
+        font-size: 3.5rem;
+        font-weight: 500;
+         margin-bottom: .5rem;
+      }
+      p {
+        display: inline-block;
+        font-size: 1.3rem;
+        color: grey;
+        margin-bottom: 2rem;
+        margin-right: 5rem;
+      }
+      button {
+        padding: 1rem 3rem;
+        color: white;
+        border-radius: 2rem;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        transition: all .3s ease;
+        &:hover {opacity: .8;}
+        &:focus {
+          outline: none;
+          border: none;
+        }
+      }
+    }
+  }
+  .box1 {@include color_render($b1cd, $b1cl)}
+  .box2 {@include color_render($b2cd, $b2cl)}
+  .box3 {@include color_render($b3cd, $b3cl)}
+  .box4 {@include color_render($b4cd, $b4cl)}
+  .box5 {@include color_render($b5cd, $b5cl)}
+
+  
+}
+*/
 /*# sourceMappingURL=styles-home-cube.css.map */
