--- a/styles-home.css
+++ b/styles-home.css
@@ -15,36 +15,58 @@ body {
 .navbar {
     display: flex;
     justify-content: space-between;
-    padding: 10px 80px 0px;
-    background-color: white;
-    /* background-image: linear-gradient(to right, white 50%, black 50%);*/
+    padding: 0px 80px 0px;
+    background-color: whitesmoke
 } 
-
+.left-navbar{
+    margin-top: 5px;
+}
 .right-navbar {
     display: flex;
     overflow: auto;
     justify-content: space-between;
+    background-color: whitesmoke;
 }
 .navbar > .right-navbar > div {
-    margin-right: 25px;
-    margin-top: 11px;
-    font-size: 1em;
-    text-transform: uppercase;
+    height: 30px;
+    width: 120px;
+    margin-top: 15px;
+    font-size: 1.1em;
+    background-color: whitesmoke;
+}
+.nav-link1 {
+    height: 22px;
+    border-bottom: 1px solid black;
+    transition: border-bottom 0.5s;
+    text-align: center;
+}
+.nav-link1 a {
+    color: #232323;
+    opacity: 1;
+    text-decoration: none;
+    transition: color 0.5s;
+    font-family: 'poppins';
+    font-weight: bold;
+}
+.nav-link1 a:hover {
+    color: rgb(0, 0, 0);
+    opacity: 1;
 }
 .nav-link {
-    margin-left: 50px;
     height: 22px;
     border-bottom: 1px solid transparent;
     transition: border-bottom 0.5s;
+    text-align: center;
 }
 .nav-link a {
-    color: rgb(0, 0, 0);
+    color: #232323;
     opacity: 0.8;
     text-decoration: none;
     transition: color 0.5s;
     font-family: 'poppins';
     font-weight: bold;
 }
+
 .nav-link:hover {
     border-bottom: 1px solid rgb(0, 0, 0);
 }
@@ -62,17 +84,19 @@ body {
 
 .background-parallax > div:nth-child(1) {
     justify-content: space-between;
-    background-color: rgb(255, 255, 255);
+    background-color: whitesmoke;
     size: 100% 100%;
     height: 91vh;
 }
 .p1text{
     padding: 80px;
     margin-top: -10vh;
+    color: rgb(17,17,17);
+    margin-top: -10vh;
 }
 .p1text h2{
     font-size: 3em;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 0.5em;
 }
 .p1text h2 span{
@@ -87,7 +111,7 @@ body {
 .p1button{
     position: relative;
     display: inline-block;
-    background: rgb(0, 0, 0);
+    background: rgb(29, 29, 31);
     border: 2px solid rgb(0, 0, 0);
     border-radius: 15px;
     color: rgb(255, 255, 255);
@@ -123,6 +147,7 @@ body {
 .background-parallax > div:nth-child(2) {
     justify-content: center;
     background-size: 100% 100%;
+    background-color: whitesmoke;
     height: 100vh;
     z-index: 0;
 }
@@ -132,16 +157,18 @@ body {
     height: 10vh;
     width: 40vh;
     margin-top: -45vh;
-    margin-left: -35vw;
+    margin-left: -28.5vw;
 }
 .p2education > .p2edusym {
-    background-image: url(images/greek_temple.jpg);
-    background-size: 100% 100%;
-    height: 60px;
-    width: 60px;
-    position: relative;
-    /* margin-top: -45vh;
-    margin-left: -40vh; */
+    display: inline-block;
+    font-size: 2em;
+    height: 50px;
+    width: 50px;
+    margin: 0 40px 10px 0;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 50%;
+    color: #000000;
 }
 .p2education > h2{
     font-family: 'Roboto', sans-serif;
@@ -153,11 +180,11 @@ body {
 
 .p2timelinebox {
     position: absolute;
-    background-color: rgb(255, 255, 255);
+    background-color: whitesmoke;
     height: 70vh;
     width: 60vh;
     margin-top: -30vh;
-    margin-left: -35vw;
+    margin-left: -28.5vw;
 }
 .p2timelinebox > .p2verticalLine {
     margin-left: 10px;
@@ -255,15 +282,18 @@ body {
 .p2Leftbackground{
     margin-right: -42%;
     height: 100vh;
-    width: 58vw;
-    background-color: #C5CAE9;
+    width: 75vw;
+    /*background-color: #C5CAE9;*/
+    /*background-image: url(images/earth.jpg);*/
+    background-size: 100% 100%;
+    background-attachment: fixed;
 }
 .p2Lefttextbox{
     position: absolute;
     height: 80vh;
     width: 57vw;
     margin-left: 30%;
-    background-color: rgba(208, 210, 221, 0.507);
+    /*background-color: rgba(208, 210, 221, 0.507);*/
     z-index: 10;
     box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
             inset 0 -15px 15px rgba(255, 255, 255, 0.05),
@@ -300,46 +330,14 @@ body {
     font-weight: 400;
     transition:color 1s;
 }
-/*
-.p2text {
-    color: white;
-    padding: 80px;
-    font-family: 'Poppins', sans-serif;
-}
-.p2text h2{
-    margin-left: 40%;
-    margin-top: -15%;
-    font-size: 3em;
-    font-weight: 600;
-    line-height: 0.5em;
-}
-.p2text h3{
-    background-color: white;
-    color: black;
-    margin-top: 5%;
-    padding: 20px;
-    font-size: 1.4em;
-    font-weight: normal;
-    opacity: 0.9;
-    border: 2px solid white;
-    border-radius: 10px;
-}
-*/
-/*
-#cover {
-    position: absolute;
-    background: rgb(175, 74, 74);
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-}
-*/
+/*-----------------------Child 3------------------------------*/
 
 .background-parallax > div:nth-child(3) {
     justify-content: center;
-    background-image: url(images/earth.jpg);
+    /*background-image: url(images/earth.jpg);
+    background-attachment: fixed;*/
+    background-color: whitesmoke;
     background-size: 100% 100%;
-    background-attachment: fixed;
     height: 100vh;
 }
 .p3_slider {
@@ -376,6 +374,7 @@ body {
             0 15px 15px rgba(0,0,0,0.3),
             inset 0 15px 15px rgba(0,0,0,0.3);
 }
+
 .p3_project2 {
     height: 500px;
     width: 800px;
@@ -386,6 +385,7 @@ body {
             0 15px 15px rgba(0,0,0,0.3),
             inset 0 15px 15px rgba(0,0,0,0.3);
 }
+
 .p3_project3 {
     height: 500px;
     width: 800px;
@@ -395,6 +395,22 @@ body {
             inset 0 -15px 15px rgba(255, 255, 255, 0.05),
             0 15px 15px rgba(0,0,0,0.3),
             inset 0 15px 15px rgba(0,0,0,0.3);
+}
+
+.p3_project3 > h2{
+    color: darkblue;
+    background-color: darkgoldenrod;
+    height: 50px;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px;
+    margin-top: 100px;
+}
+.p3_project3 >h4{
+    color:darkgreen;
+    background-color: darkviolet;
+    margin-top: 100px;
 }
 .p3_navigation_manual {
     position: absolute;
@@ -426,47 +442,24 @@ body {
 #radio3:checked ~ .first{
     margin-left: -40%;
 }
+
+/*----------------------Child 4-------------------------------*/
+
 .background-parallax > div:nth-child(4) {
     justify-content: center;
     background: rgb(23, 20, 53);
     background-size: 100% 100%;
     height: 100vh;
+    padding-left: 0rem;
 }
-#text4 {
-    font-size: 60px;
-    background: #eee;
-    padding: 8px 24px;
-    border-radius: 16px;
-}
-/*
-.footer {
-    color: #717981;
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    background-color: #f5f5f5;
-    color: #909498;
-    cursor: default;
-    position: relative;
-    margin: 0 auto;
-    width: calc(100% - 4rem);
-    max-width: 72rem;
-    Color Codes
-    color: #18bfef;              
-    color: #717981;
-    color: #f5f5f5;
-    color: #b3b7bb;
-    
-}
-*/
 
+/*--------------------Footer-------------------------------*/
 .footer {
     padding: 10px;
-    background-color: aqua;
+    background-color: #232323;
 }
 .footer-col{
-    margin-left: 37%;
+    margin-left: 36%;
 }
 .footer-col > h3{
     font-family: 'Poppins', sans-serif;
@@ -474,23 +467,25 @@ body {
     font-weight: normal;
     font-size: 35px;
     line-height: 10px;
-    color: #000000;
-    margin-left: 80px;
+    /*color: #2984cd;*/
+    color: #fffffe;
+    margin-left: 100px;
 }
+
 .footer-col > .social-links a{
     display: inline-block;
     font-size: 1.4em;
     height: 50px;
     width: 50px;
-    background-color: #43c91a;
+    background-color: #515151;
     margin: 0 40px 10px 0;
     text-align: center;
     line-height: 50px;
     border-radius: 50%;
-    color: #ffffff;
+    color: #fffffe;
     transition: all 0.5s ease;
 }
 .footer-col > .social-links a:hover {
-    color: #24262b;
-    background-color: #ffffff;
+    color: #fffffe;
+    background-color: #2a92e5;
 }
